2007-02-07  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	* fvwm/colorset.c (parse_colorset):
	don't recompute sh, hi and fgsh if they were supplied in a previous
	colorset line. Fixes bug #3359.

2007-02-06  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/move_resize.c (DoSnapAttract):
	handle SnapGrid before SnapAttraction so that non-overlapping windows
	do not snap edge to edge:
	                            +---+
	                            |   |
	                            +---+---+
	                                |   |
	                                +---+

2007-02-05  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/style.c (parse_and_set_window_style)
	(style_parse_one_style_option):
	don't warn about PositionPlacement arguments

2007-02-04  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* AUTHORS:
	* NEWS:
	enties for ChangeWindowTitle patch by Julio Teca.

2007-02-04  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/fvwm.c (main):
	fixed ROOT CursorStyle context

	* fvwm/placement.c (__pl_manual_get_pos_simple):
	* fvwm/move_resize.h:
	* fvwm/move_resize.c (__move_loop):
	(InteractiveMove):
	fixed long broken POSITION CursorStyle context

2007-02-04  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/bindings.c (ParseBinding):
	fix buffer overrun with >78 character window names.

	* fvwm/fvwm.1.in (PositionPlacement):
	fix typos

	* fvwm/fvwm.1.in (BorderWidth, HandleWidth):
	* fvwm/style.c (style_parse_one_style_option):
	change BorderWidth and HandleWidth style  to revert to default if no
	arguments are given

2007-02-04  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/fvwm.h (style_flags):
	* fvwm/placement.c (__pl_under_mouse_get_pos_simple):
	(__place_get_wm_pos):
	(__place_window, __explain_placement):
	* fvwm/style.c (style_parse_one_style_option):

	* libs/defaults.h (DEFAULT_PLACEMENT_POS_CENTER_STRING)
	(DEFAULT_PLACEMENT_POS_MOUSE_STRING)
	(DEFAULT_PLACEMENT_POSITION_STRING):