@@ -81,8 +81,9 @@ Scott Smedley:
 Wrote FvwmTabs module. Improved Perl module support. FakeKeyPress
 command. Window-specific key/mouse bindings. FvwmButtons: ActiveIcon,
 ActiveTitle, ActiveColorset, PressIcon, PressTitle & PressColorset options.
-FvwmWindowMenu: rewrote to use WindowList tracker; Version test condition.
-Added "Periodic" option to Schedule command.
+FvwmWindowMenu: rewrote to use WindowList tracker. Version test condition.
+Added "Periodic" option to Schedule command. Converted manpage into XML
+source to generate HTML documenation & (auto-generated) manpage.
 
 Francis Litterio:
 Fixed building FvwmScript under cygwin.  Added CenterPlacement style.
