@@ -22,6 +22,7 @@ Changes in beta release 2.5.22 (not released yet)
    - Removed UnderMousePlacement and CenterPlacement.  Use
      "PositionPlacement Center" and "PositionPlacement UnderMouse"
      instead.
+   - Documentation in HTML format.
 
 * New module features:
 
